# Bank-System

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
app/database/: admin.json  client.json  employee.json
app/include/: OldValidation.h  admin.h  authFun.h  client.h  employee.h  generalFunctions.h  globalFun.h  improvedValidation.h  person.h  screen.h  validation.h
app/src/: OldValidation.cpp  admin.cpp  authFun.cpp  client.cpp  employee.cpp  generalFunctions.cpp  globalFun.cpp  improvedValidation.cpp  person.cpp  screen.cpp  validation.cpp
